Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88729

FAIL! : tst_QCoapMessage::addOption() Received a fatal error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.0.0, 6.1.0
    • 6.0.0 Beta5
    • CoAP
    • None
    • 432791f618f54286a8c48632678e6a29893cffb7 (qt/qtcoap/dev) 5441da27f423a5ed7365a6f7177e32711fc6e790 (qt/qtcoap/6.0.0) 2f50b5b97d389c1f91290cb7b62a7397b978f96c (qt/qtcoap/6.0)

      agent:2020/11/19 13:34:05 build.go:379: ********* Start testing of tst_QCoapMessage *********
      agent:2020/11/19 13:34:05 build.go:379: Config: Using QtTest library 6.0.0, Qt 6.0.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 8.3.1 20191121 (Red Hat 8.3.1-5)), centos 8
      agent:2020/11/19 13:34:05 build.go:379: PASS   : tst_QCoapMessage::initTestCase()
      agent:2020/11/19 13:34:05 build.go:379: PASS   : tst_QCoapMessage::copyAndDetach()
      agent:2020/11/19 13:34:05 build.go:379: PASS   : tst_QCoapMessage::setType(acknowledgment)
      agent:2020/11/19 13:34:05 build.go:379: PASS   : tst_QCoapMessage::setType(confirmable)
      agent:2020/11/19 13:34:05 build.go:379: PASS   : tst_QCoapMessage::setType(non-confirmable)
      agent:2020/11/19 13:34:05 build.go:379: PASS   : tst_QCoapMessage::setType(reset)
      agent:2020/11/19 13:34:05 build.go:379: === Received signal at function time: 0ms, total time: 1ms, dumping stack ===
      agent:2020/11/19 13:34:05 build.go:379: === End of stack trace ===
      agent:2020/11/19 13:34:05 build.go:379: QFATAL : tst_QCoapMessage::addOption() Received signal 11
      agent:2020/11/19 13:34:05 build.go:379:          Function time: 0ms Total time: 1ms
      agent:2020/11/19 13:34:05 build.go:379: FAIL!  : tst_QCoapMessage::addOption() Received a fatal error.
      agent:2020/11/19 13:34:05 build.go:379:    Loc: [Unknown file(0)]
      agent:2020/11/19 13:34:05 build.go:379: Totals: 6 passed, 1 failed, 0 skipped, 0 blacklisted, 9ms
      agent:2020/11/19 13:34:05 build.go:379: ********* Finished testing of tst_QCoapMessage *********
      agent:2020/11/19 13:34:06 build.go:379: make: *** [Makefile:258: check] Aborted (core dumped)
      agent:2020/11/19 13:34:06 build.go:430: Process finished with error: exit status 2
      agent:2020/11/19 13:34:26 runner.go:169: Re-running tests/auto/qcoapmessage with TESTARGS=addOption
      agent:2020/11/19 13:34:26 build.go:508: [make check -j1] 900 900
      agent:2020/11/19 13:34:26 build.go:402: [make check -j1] 900 900 false false
      agent:2020/11/19 13:34:26 build.go:379: /home/qt/work/qt/qtcoap/tests/auto/qcoapmessage/target_wrapper.sh  ./qcoapmessage addOption -maxwarnings 0
      agent:2020/11/19 13:34:26 build.go:379: ********* Start testing of tst_QCoapMessage *********
      agent:2020/11/19 13:34:26 build.go:379: Config: Using QtTest library 6.0.0, Qt 6.0.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 8.3.1 20191121 (Red Hat 8.3.1-5)), centos 8
      agent:2020/11/19 13:34:26 build.go:379: PASS   : tst_QCoapMessage::initTestCase()
      agent:2020/11/19 13:34:26 build.go:379: === Received signal at function time: 0ms, total time: 2ms, dumping stack ===
      agent:2020/11/19 13:34:26 build.go:379: === End of stack trace ===
      agent:2020/11/19 13:34:26 build.go:379: QFATAL : tst_QCoapMessage::addOption() [     0.000 F] default unknown - Received signal 11
      agent:2020/11/19 13:34:26 build.go:379:          Function time: 0ms Total time: 2ms
      agent:2020/11/19 13:34:26 build.go:379: FAIL!  : tst_QCoapMessage::addOption() Received a fatal error.
      agent:2020/11/19 13:34:26 build.go:379:    Loc: [Unknown file(0)]
      agent:2020/11/19 13:34:26 build.go:379: Totals: 1 passed, 1 failed, 0 skipped, 0 blacklisted, 12ms
      agent:2020/11/19 13:34:26 build.go:379: ********* Finished testing of tst_QCoapMessage *********
      agent:2020/11/19 13:34:26 build.go:379: make: *** [Makefile:258: check] Aborted (core dumped)
      agent:2020/11/19 13:34:26 build.go:430: Process finished with error: exit status 2
      agent:2020/11/19 13:34:26 build.go:654: Executing scheduled instruction 1 of 2 - Upload all core dumps if there are some
      agent:2020/11/19 13:34:26 build.go:563: Skip uploading core files because CORE_FILES_PATH is not set in the environment
      agent:2020/11/19 13:34:26 build.go:662: 
      agent:2020/11/19 13:34:26 build.go:654: Executing scheduled instruction 2 of 2 - Upload test results
      agent:2020/11/19 13:34:26 storageclient.go:517: Collecting test results, archiving and uploading them
      agent:2020/11/19 13:34:26 result.go:177: Collecting 2 test results ...
      agent:2020/11/19 13:34:27 build.go:662: 
      agent:2020/11/19 13:34:27 agent.go:280: Test failed
      agent:2020/11/19 13:34:27 agent.go:202: ERROR building: exit status 2
      INFO:workitem.py:644(82109): Agent FINISHED FAIL: testing /home/qt/work/qt/qtcoap/tests/auto/qcoapmessage: qt/qtcoap/8bfa13ba552c9a46b29902c81f7590b820ca3673/LinuxCentOS_8_1x86_64LinuxCentOS_8_1x86_64GCCqtci-linux-CentOS-8.1-x86_64-50-18ba4dUseLegacyInstructions/612d4f96521f2f38d2a80b0e7209f7d52d86c65d/Test
      INFO:workitem.py:726(82109): <a href="https://qtmetrics.intra.qt.io/d/nOAsINmZz/jimis-telegraf-vms?orgId=1&from=1605792814000&to=1605792867000&var-server=1605607489-21729">VM metrics</a>
      INFO:workitem.py:728(82109): <a href="https://qtmetrics.intra.qt.io/d/nOAsINNZz/jimis-telegraf-hosts?orgId=1&from=1605792814000&to=1605792867000&var-server=still-donkey">Host metrics</a>
      

      Build log: https://testresults.qt.io/logs/qt/qtcoap/8bfa13ba552c9a46b29902c81f7590b820ca3673/LinuxCentOS_8_1x86_64LinuxCentOS_8_1x86_64GCCqtci-linux-CentOS-8.1-x86_64-50-18ba4dUseLegacyInstructions/612d4f96521f2f38d2a80b0e7209f7d52d86c65d/test_1605792387/log.txt.gz

      Tested changes (refs/builds/qtci/dev/1605792301):
      https://codereview.qt-project.org/c/qt/qtcoap/+/319334/1 Add changes file for Qt 5.15.2
      https://codereview.qt-project.org/c/qt/qtcoap/+/321891/1 Update dependencies on 'dev'

      Details: https://testresults.qt.io/coin/integration/qt/qtcoap/tasks/1605792326

        For Gerrit Dashboard: QTBUG-88729
        # Subject Branch Project Status CR V

            sonakur Sona Kurazyan
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes