Fix a crash when adding a QCoapOption to options list

Due to recent changes, when calling any QList-modifying operations, the
previously saved iterators on the list may be invalidated. Use indexes
instead of iteratots when inserting into the list of QCoapOptions.

Fixes: QTBUG-88729
Change-Id: I73e9bb841594f0dab992fda37fed4ad29081ae7c
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Karsten Heimrich <karsten.heimrich@qt.io>